test/expect/cmd.gccxml-and-c99-stderr.txt
^error: '--castxml-gccxml' does not work with c99$
